# fraud-detector

./: .gitignore  README.md  app.py  documentation.md  pyproject.toml
algorithms/: __init__.py
algorithms/graph/: velocity_validator.py
algorithms/ranking/: multi_factor_score.py
algorithms/spatial/: bounding_box.py  haversine.py
algorithms/trees/: ball_tree.py
app/: __init__.py  main.py  services.py
app/models/: __init__.py
benchmark-results/: benchmark_report.md  complexity.csv  latency.csv  memory.csv  profiling.txt  throughput.csv
benchmark-results/historical/: run_1782620824.json  run_1782620843.json  run_1782742350.json  run_1782742756.json  run_1782742998.json
benchmarks/: run_all.py  utils.py
benchmarks/adapters/: benchmark_adapters.py
benchmarks/algorithms/: benchmark_algorithms.py
benchmarks/batch/: benchmark_batch.py
benchmarks/datasets/: generator.py
benchmarks/engine/: benchmark_engine.py
benchmarks/memory/: benchmark_memory.py
benchmarks/ml/: benchmark_ml.py
benchmarks/scalability/: benchmark_scalability.py
benchmarks/stress/: benchmark_stress.py
configs/application/: api_dev.yaml  api_prod.yaml
configs/deployment/: infrastructure.yaml
data/: sample_pings.csv
deployment/: Dockerfile.api
fraud_detector/: __init__.py  main.py
lib-tests/: run_all.py
prj/: __init__.py
scripts/: generator.py  prune_db.py  refactor_imports.py  retrain_all.py  run_api.sh  run_worker.py
shieldflow/: __init__.py  config.py  engine.py
tests/: README.md
training/: retrain.py  train_pipeline.py  tune_params.py
(+121 files in other folders)
