[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detector"
version = "1.0.0"
description = "ShieldFlow core reusable SDK and anomaly detection plugin library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "redis>=4.0.0",
    "numpy>=1.20.0",
    "SQLAlchemy>=2.0.0"
]

[tool.setuptools.packages.find]
include = ["fraud_detector*"]
